Fixed row gap in tabsbar icons

--- a/_modules_diff/modules/CoreWebclient/styles/themes/NetcoreNext/styles.less
+++ b/_modules_diff/modules/CoreWebclient/styles/themes/NetcoreNext/styles.less
@@ -36,7 +36,7 @@
         flex-wrap: nowrap !important;
         height: calc(100vh - 95px) !important;
         align-items: flex-start !important;
-        row-gap: 15px;
+        row-gap: 8px;
 
         > .item{
             padding-left: @tabsbar-item-left-padding !important;
